--- a/emp-react-app/src/App.css
+++ b/emp-react-app/src/App.css
@@ -3,19 +3,51 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 40px;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+.App-body {
+  background-color: #f0f0f0; /* Light background color */
+  background-image:
+    linear-gradient(45deg, rgba(200, 200, 200, 0.4) 1%, transparent 1%, transparent 50%, rgba(200, 200, 200, 0.4) 50%, rgba(200, 200, 200, 0.4)),
+    linear-gradient(-45deg, rgba(200, 200, 200, 0.4) 1%, transparent 1%, transparent 50%, rgba(200, 200, 200, 0.4) 50%, rgba(200, 200, 200, 0.4));
+  background-size: 100px 100px;
+  background-position: 0 0, 0px 0px;
+  min-height: 80vh; /* Ensure it covers the whole viewport */
+}
+
+.App-button {
+  background-color: #808080; /* Grey background */
+  color: white;             /* White text */
+  border: none;             /* No border */
+  padding: 10px 20px;       /* Padding inside the button */
+  text-align: center;       /* Center the text */
+  text-decoration: none;    /* No underline */
+  display: inline-block;    /* Inline-block display */
+  font-size: 16px;          /* Font size */
+  margin: 4px 2px;          /* Margin around the button */
+  cursor: pointer;          /* Pointer cursor on hover */
+  border-radius: 8px;       /* Rounded corners */
+  box-shadow: 0 4px #666;   /* Shadow for depth, darker shade of grey */
+  transition: all 0.3s ease; /* Smooth transition for hover effect */
+}
+
+.App-button:hover {
+  background-color: #666; /* Darker shade when hovered */
+  box-shadow: 0 2px #444; /* Smaller shadow when hovered */
+  transform: translateY(2px); /* Slightly move the button up */
+}
+
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -28,11 +60,34 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+.warning-box {
+  border: 1px solid #ffa500;
+  padding: 10px;
+  margin: 10px 0;
+  background-color: #fffbe6;
+}
+
+.popup-box {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border: 1px solid #ccc;
+  z-index: 1000;
+}
+
+.popup-content {
+  text-align: center;
+}
+
+
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
