--- a/emp-react-app/src/App.css
+++ b/emp-react-app/src/App.css
@@ -180,6 +180,70 @@
   background-color: white; 
 }
 
+/* Popup background overlay */
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+/* Popup content area */
+.popup-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  min-width: 300px;
+  max-width: 600px; /* Adjust as needed */
+  max-height: 80vh; /* Maximum height relative to the viewport height */
+  overflow-y: auto; /* Enable vertical scrolling */
+  text-align: center;
+}
+
+/* Close button for the popup */
+.popup-content button {
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: #808080;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%; /* Take full height of the container */
+}
+
+/* Inner spinner element */
+.spinner div {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  border-left-color: #09f;
+  animation: spin 1s ease infinite;
+}
+
+/* Spinner animation */
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 
 /* @keyframes App-logo-spin {
   from {
