--- a/emp-react-app/src/App.css
+++ b/emp-react-app/src/App.css
@@ -48,9 +48,9 @@
   text-decoration: none;     /* No underline */
   display: inline-block;     /* Inline-block display */
   font-size: 14px;           /* Smaller font size */
-  margin: 4px 2px;           /* Margin around the button */
+  margin: 10px 10px;           /* Margin around the button */
   cursor: pointer;           /* Pointer cursor on hover */
-  border-radius: 4px;        /* Smaller border radius */
+  border-radius: 6px;        /* Smaller border radius */
   box-shadow: 0 2px #787878; /* Smaller shadow, darker shade of gray */
   transition: all 0.3s ease; /* Smooth transition for hover effect */
 }
@@ -200,8 +200,8 @@
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-  min-width: 300px;
-  max-width: 600px; /* Adjust as needed */
+  min-width: 45%;
+  max-width: 45%; /* Adjust as needed */
   max-height: 80vh; /* Maximum height relative to the viewport height */
   overflow-y: auto; /* Enable vertical scrolling */
   text-align: center;
